Avoid usage of deprecated Locale constructor
The "new Locale(...)" constructor has been deprecated with Java 20 and
replaced by the static "Locale.of(...)" factory. Given that
WindowBuilder already requires Java 21, there is no benefit to keep
using the constructor.